// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > should call the click event when the icon is clicked 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class=""
    data-tag="icon"
    role="button"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should handle role=option as checkbox 1`] = `
<div>
  <rk-icon
    aria-checked="false"
    aria-label="i-rokkit:mode-dark"
    class=""
    data-tag="icon"
    role="option"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon as disabled 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class="disabled"
    data-tag="icon"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with a custom class 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class="custom-class"
    data-tag="icon"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with a custom class 2`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class="custom-class-2"
    data-tag="icon"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with checkbox role 1`] = `
<div>
  <rk-icon
    aria-checked="false"
    aria-label="i-rokkit:mode-dark"
    class=""
    data-tag="icon"
    role="checkbox"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with checkbox role with default state 1`] = `
<div>
  <rk-icon
    aria-checked="false"
    aria-label="i-rokkit:mode-dark"
    class=""
    data-tag="icon"
    role="checkbox"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the provided name and label 1`] = `
<div>
  <rk-icon
    aria-label="Dark mode"
    class=""
    data-tag="icon"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the provided name and label 2`] = `
<div>
  <rk-icon
    aria-label="Light mode"
    class=""
    data-tag="icon"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-light"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified role 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class=""
    data-tag="icon"
    role="button"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified size 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class="small"
    data-tag="icon"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified size 2`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class="medium"
    data-tag="icon"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified size 3`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:mode-dark"
    class="large"
    data-tag="icon"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:mode-dark"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render the icon with the specified state 1`] = `
<div>
  <rk-icon
    aria-label="i-rokkit:node-opened"
    class=""
    data-state="opened"
    data-tag="icon"
    role="img"
    tabindex="-1"
  >
    <i
      aria-hidden="true"
      class="i-rokkit:node-opened"
    />
  </rk-icon>
  
</div>
`;
